--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@ body {
   font-family: "Courgette", cursive;
 }
 
-.text-green {
-  color: #169e16;
+.text-orange {
+  color: #e7671cbb;
 }
 
 .letter-spacing {
